istio/istio-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: client-virtualservice
  namespace: istio-demo
spec:
  hosts:
  - "*"
  gateways: 
  - client-gateway
  http:
  - name: "clientapi"
    match:
    - uri:
        exact: "/weather"
    - uri:
        exact: "/stock"
    route:
    - destination:
        host: clientserver.istio-demo.svc.cluster.local
  - name: "weatherapi"
    match:
    - uri:
        prefix: "/weatherapi"
    route:
    - destination:
        host: weatherserver.istio-demo.svc.cluster.local
  - name: "stockapi"
    match:
    - uri:
        prefix: "/stockpriceapi"
    route:
    - destination:
        host: stockpriceserver.istio-demo.svc.cluster.local
